# clipmaster

./: .gitignore  GUIA_COMPLETO.md  README.md  README.pt-BR.md  clips.bat  fix_cuda_libs.py  fix_dlls.py  main.py  ollamadd.py  processing_history.json  pyproject.toml  requirements.txt  run_linux.sh  run_windows.bat  setup_and_run.py  teste.py
.github/workflows/: pages.yml
app/: main.py
app/core/: config.py  cuda_setup.py  logger.py
app/models/: schemas.py
app/services/: clip_manager.py  llm_analyzer.py  transcription.py  video_engine.py
app/ui/: main_window.py
app/ui/components/: drop_zone.py
app/ui/dialogs/: clip_dialog.py
app/workers/: processing_task.py
clipmaster/: README.md
clipmaster/app/: __init__.py  main.py
clipmaster/app/core/: config.py
clipmaster/app/services/: clip_manager.py  transcription.py
clipmaster/app/ui/: main_window.py
clipmaster/app/ui/components/: drop_zone.py
clipmaster/app/ui/dialogs/: clip_dialog.py
clipmaster/app/workers/: processing_task.py
docs/: index.html  styles.css
exports/4 Frases estoicas de Marco Aurélio que vão MUDAR sua vida! #estoicismo  #marcoaurelio #frases_processed/: descricao_e_insights.txt
exports/4 Frases_processed/: descricao_e_insights.txt
exports/FIZEMOS COMPRAS NO PARAGUAI - PRIMEIRA VEZ DO BALESTRIN!!!_processed/: descricao_e_insights.txt
originproject/: main.py
site/: privacy.html  terms.html
